fix invisible link text

--- a/assets/css/outlook.scss
+++ b/assets/css/outlook.scss
@@ -76,6 +76,9 @@
 	p {
 		color: white;
 	}
+	.hyperlink {
+		color: white;
+	}
 }
 
 
